@@ -150,7 +150,7 @@ $l['calendars']='Kalender';
 $l['open_resource']='Freie Ressource';
 $l['resource_mail_subject']='Die Ressource \'%s\', gebucht für \'%s\' am \'%s\'';//%s is resource name, %s is event name, %s is start date;
 $l['resource_mail_body']='%s hat die Ressource \'%s\' gebucht. Sie sind der Verwalter dieser Ressource. Bitte öffnen Sie die betreffende Buchung, um dieser zuzustimmen oder zu widersprechen.'; //First %s is the name of the person who created the event. Second is the calendar name;
-$l['resource_modified_mail_subject']='Resource \'%s\' booking for \'%s\' on \'%s\' modified';//%s is resource name, %s is event name, %s is start date;
+$l['resource_modified_mail_subject']='Die Ressource \'%s\', gebucht für \'%s\' am \'%s\', wurde verändert';//%s is resource name, %s is event name, %s is start date;
 $l['resource_modified_mail_body']='%s hat eine Buchung für die Ressource \'%s\' verändert. Sie sind der Verwalter dieser Ressource. Bitte öffnen Sie die betreffende Buchung, um dieser zuzustimmen oder zu widersprechen.'; //First %s is the name of the person who created the event. Second is the calendar name;
 $l['your_resource_modified_mail_subject']='Ihre Buchung für \'%s\' am \'%s\' mit Status \'%s\' wurde verändert';//is resource name, %s is event name, %s is start date;
 $l['your_resource_modified_mail_body']='%s hat Ihre Buchung für die Ressource \'%s\' verändert.';
